Implemented start of planning logic and storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity_calendar"></activity>
         <activity
             android:name=".activity_meal_list"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".MainActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity_add_ingredient"
+            android:parentActivityName=".activity_add_meal"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".activity_add_meal"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity_add_meal"
             android:label="@string/title_activity_second"
