--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:label="Demo">
+            android:label="Dinner Planner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
